Hopefully fix select styling on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -131,15 +131,15 @@
 }
 
 .rel-select {
-    background-color: #fff;
-    height: 100%;
-    min-height: 46px;
+    background-color: transparent;
+    height: 48px;
+    min-height: 47px;
     width: 100%;
     min-width: 0;
 }
 
 .bc-select {
-    background-color: #fff;
+    background-color: transparent;
     border-width: 0;
     height: 46px;
     min-width: 0;
